--- a/shortcuts.cfg
+++ b/shortcuts.cfg
@@ -6,6 +6,7 @@
 "LuminaViewAllMds"=0
 "StringUnicode"="Alt-W"
 "UnHide"="+"
+"UndoReturn="`"
 "hx:CollapseDecls"="-"
 "hx:CollapseItem"="-"
 "hx:DelVarArg"="-"
