--- a/config/idapro/shortcuts.cfg
+++ b/config/idapro/shortcuts.cfg
@@ -6,7 +6,7 @@
 "LuminaViewAllMds"=0
 "StringUnicode"="Alt-W"
 "UnHide"="+"
-"UndoReturn="`"
+"UndoReturn"="`"
 "hx:CollapseDecls"="-"
 "hx:CollapseItem"="-"
 "hx:DelVarArg"="-"
